--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ language: objective-c
 # - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -workspace Example/SmartPopup.xcworkspace -scheme SmartPopup-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+- pod lib lint --allow-warnings
